Add doxygen integration

--- a/.github/workflows/doxygen.yml
+++ b/.github/workflows/doxygen.yml
@@ -16,6 +16,7 @@ jobs:
 
       - name: "Setup doxygen"
         run: |
+          sudo apt-get -y install doxygen graphviz
           doxygen --version
           dot -V
 
