--- a/.github/workflows/build-windows-cygwin.yml
+++ b/.github/workflows/build-windows-cygwin.yml
@@ -27,7 +27,7 @@ jobs:
       - name: "Setup cmake"
         run: cmake --version
 
-      - name: "Setup gil tool"
+      - name: "Setup gil"
         shell: cmd
         run: |
           pip3 install gil
