--- a/.github/workflows/build-windows-mingw.yml
+++ b/.github/workflows/build-windows-mingw.yml
@@ -19,7 +19,7 @@ jobs:
       - name: "Setup cmake"
         run: cmake --version
 
-      - name: "Setup gil tool"
+      - name: "Setup gil"
         run: |
           pip3 install gil
           gil update
