--- a/.github/workflows/build-windows-msys2.yml
+++ b/.github/workflows/build-windows-msys2.yml
@@ -30,7 +30,7 @@ jobs:
       - name: "Setup cmake"
         run: cmake --version
 
-      - name: "Setup gil tool"
+      - name: "Setup gil"
         run: |
           pip3 install gil
           gil update
