Add doxygen integration

--- a/.github/workflows/doxygen.yml
+++ b/.github/workflows/doxygen.yml
@@ -33,7 +33,7 @@ jobs:
 
       - name: "Doxygen"
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ github.token }}
         run: |
           echo ${GITHUB_TOKEN}
           cd build/Unix
