--- a/.github/workflows/build-windows-cygwin.yml
+++ b/.github/workflows/build-windows-cygwin.yml
@@ -22,7 +22,7 @@ jobs:
         uses: egor-tensin/setup-cygwin@v3
         with:
           platform: x64
-          packages: cmake gcc-g++
+          packages: cmake gcc-g++ libuuid-devel
 
       - name: "Setup cmake"
         run: cmake --version
