--- a/.github/workflows/build-windows-mingw.yml
+++ b/.github/workflows/build-windows-mingw.yml
@@ -13,8 +13,6 @@ jobs:
 
       - name: "Setup MinGW"
         uses: egor-tensin/setup-mingw@v2
-        with:
-          platform: x64
 
       - name: "Setup cmake"
         run: cmake --version
@@ -25,6 +23,9 @@ jobs:
           gil update
 
       - name: "Build"
+        env:
+          INCLUDE: C:\ProgramData\chocolatey\lib\mingw\tools\install\mingw64\x86_64-w64-mingw32\include
+          LIB: C:\ProgramData\chocolatey\lib\mingw\tools\install\mingw64\x86_64-w64-mingw32\lib
         run: |
           cd build
           ./mingw.bat
