--- a/.github/workflows/build-windows-msvc.yml
+++ b/.github/workflows/build-windows-msvc.yml
@@ -12,9 +12,7 @@ jobs:
       - uses: actions/checkout@v2
 
       - name: "Setup Visual Studio"
-        uses: microsoft/setup-msbuild@v1.1
-        with:
-          msbuild-architecture: x64
+        uses: egor-tensin/vs-shell@v2
 
       - name: "Setup cmake"
         run: cmake --version
