--- a/.github/workflows/build-windows-cygwin.yml
+++ b/.github/workflows/build-windows-cygwin.yml
@@ -10,7 +10,7 @@ jobs:
     runs-on: windows-latest
     defaults:
       run:
-        shell: C:\tools\cygwin\bin\bash.exe --login -o igncr '{0}'
+        shell: C:\tools\cygwin\bin\bash.exe --login -o igncr {0}
     steps:
       - name: "Setup git"
         shell: cmd
@@ -22,7 +22,7 @@ jobs:
         uses: egor-tensin/setup-cygwin@v3
         with:
           platform: x64
-          packages: automake make cmake gcc-g++ libuuid-devel
+          packages: automake make cmake gcc-g++ libssl-devel libuuid-devel
 
       - name: "Setup cmake"
         run: cmake --version
