--- a/.github/workflows/build-windows-msys2.yml
+++ b/.github/workflows/build-windows-msys2.yml
@@ -10,7 +10,7 @@ jobs:
     runs-on: windows-latest
     defaults:
       run:
-        shell: msys2 '{0}'
+        shell: msys2 {0}
     steps:
       - uses: actions/checkout@v2
 
