Fixed cmake for MSYS2 build

--- a/.github/workflows/build-windows-msys2.yml
+++ b/.github/workflows/build-windows-msys2.yml
@@ -19,6 +19,7 @@ jobs:
         with:
           release: false
           install: >-
+            cmake
             git
             python3-pip
             msys2-w32api-runtime
