Fixed cmake for MSYS2 build

--- a/.github/workflows/build-windows-msys2.yml
+++ b/.github/workflows/build-windows-msys2.yml
@@ -19,8 +19,9 @@ jobs:
         with:
           release: false
           install: >-
-            cmake
             git
+            make
+            cmake
             python3-pip
             msys2-w32api-runtime
             msys2-w32api-runtime
