Fixed cmake for MSYS2 build

--- a/.github/workflows/build-windows-msys2.yml
+++ b/.github/workflows/build-windows-msys2.yml
@@ -19,7 +19,10 @@ jobs:
         with:
           install: >-
             base-devel
+            gcc
             git
+            make
+            cmake
             python3-pip
             msys2-w32api-runtime
             msys2-w32api-runtime
