--- a/.github/workflows/build-windows-msys2.yml
+++ b/.github/workflows/build-windows-msys2.yml
@@ -20,7 +20,7 @@ jobs:
           install: >-
             git
             python3-pip
-            mingw-w64-cmake
+            mingw-w64-x86_64-cmake
             msys2-w32api-runtime
 
       - name: "Setup cmake"
