--- a/.github/workflows/build-windows-msys2.yml
+++ b/.github/workflows/build-windows-msys2.yml
@@ -21,6 +21,7 @@ jobs:
             git
             python3-pip
             mingw-w64-x86_64-cmake
+            mingw-w64-x86_64-make
             mingw-w64-x86_64-gcc
             msys2-w32api-runtime
 
@@ -36,7 +37,6 @@ jobs:
         env:
           INCLUDE: C:\msys64\usr\include\w32api
           LIB: C:\msys64\usr\lib\w32api
-          PATH: C:\msys64\mingw64\bin
         run: |
           cd build
           ./unix.sh
