--- a/.github/workflows/build-windows-msys2.yml
+++ b/.github/workflows/build-windows-msys2.yml
@@ -17,12 +17,12 @@ jobs:
       - name: "Setup MSYS2"
         uses: msys2/setup-msys2@v2
         with:
-          release: false
           install: >-
+            cmake
+            make
+            gcc
             git
             python3-pip
-            mingw-w64-x86_64-cmake
-            mingw-w64-x86_64-toolchain
             msys2-w32api-runtime
 
       - name: "Setup cmake"
@@ -37,7 +37,6 @@ jobs:
         env:
           INCLUDE: C:\msys64\usr\include\w32api
           LIB: C:\msys64\usr\lib\w32api
-          PATH: C:\msys64\mingw64\bin:C:\msys64\usr\bin
         run: |
           cd build
           ./unix.sh
