--- a/.github/workflows/build-windows-msys2.yml
+++ b/.github/workflows/build-windows-msys2.yml
@@ -18,11 +18,11 @@ jobs:
         uses: msys2/setup-msys2@v2
         with:
           install: >-
-            cmake
-            make
-            gcc
             git
             python3-pip
+            mingw-w64-x86_64-cmake
+            mingw-w64-x86_64-make
+            mingw-w64-x86_64-gcc
             msys2-w32api-runtime
 
       - name: "Setup cmake"
@@ -39,4 +39,4 @@ jobs:
           LIB: C:\msys64\usr\lib\w32api
         run: |
           cd build
-          ./msys.sh
+          ./unix.sh
