--- a/.github/workflows/build-windows-msys2.yml
+++ b/.github/workflows/build-windows-msys2.yml
@@ -18,10 +18,10 @@ jobs:
         uses: msys2/setup-msys2@v2
         with:
           install: >-
+            cmake
+            make
             git
             python3-pip
-            mingw-w64-x86_64-cmake
-            mingw-w64-x86_64-make
             mingw-w64-x86_64-gcc
             msys2-w32api-runtime
 
@@ -37,7 +37,6 @@ jobs:
         env:
           INCLUDE: C:\msys64\usr\include\w32api
           LIB: C:\msys64\usr\lib\w32api
-          CMAKE_MAKE_PROGRAM: C:\msys64\usr\bin\make
         run: |
           cd build
           ./unix.sh
