Fixed cmake for MSYS2 build

--- a/.github/workflows/build-windows-msys2.yml
+++ b/.github/workflows/build-windows-msys2.yml
@@ -20,9 +20,9 @@ jobs:
           install: >-
             cmake
             make
+            gcc
             git
             python3-pip
-            mingw-w64-x86_64-gcc
             msys2-w32api-runtime
 
       - name: "Setup cmake"
@@ -35,6 +35,8 @@ jobs:
 
       - name: "Build"
         env:
+          CC: gcc 
+          CXX: g++
           INCLUDE: C:\msys64\usr\include\w32api
           LIB: C:\msys64\usr\lib\w32api
         run: |
