--- a/.github/workflows/build-linux-clang.yml
+++ b/.github/workflows/build-linux-clang.yml
@@ -12,7 +12,7 @@ jobs:
       - uses: actions/checkout@v2
 
       - name: "Setup binutils-dev"
-        run: sudo apt-get install -y binutils-dev
+        run: sudo apt-get install -y python3 binutils-dev uuid-dev
 
       - name: "Setup clang"
         uses: egor-tensin/setup-clang@v1
