--- a/.github/workflows/build-windows-msys2.yml
+++ b/.github/workflows/build-windows-msys2.yml
@@ -24,8 +24,8 @@ jobs:
             python3-pip
             mingw-w64-x86_64-cmake
             mingw-w64-x86_64-gcc
-            mingw-w64-doxygen
-            mingw-w64-graphviz
+            mingw-w64-x86_64-doxygen
+            mingw-w64-x86_64-graphviz
             msys2-w32api-runtime
 
       - name: "Setup cmake"
