--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,9 +7,14 @@ set_property(GLOBAL PROPERTY USE_FOLDERS ON)
 project(cppbenchmark)
 
 # Doxygen
-find_package(Doxygen OPTIONAL_COMPONENTS dot)
+find_package(Doxygen)
 if(DOXYGEN_FOUND)
-  doxygen_add_docs(doxygen WORKING_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/documents" COMMENT "Generate documentation using Doxygen tool")
+  set(DOXYGEN "doxygen")
+  if(NOT TARGET ${DOXYGEN})
+    add_custom_command(OUTPUT "Doxyfile" COMMAND ${DOXYGEN_EXECUTABLE} "Doxyfile" WORKING_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/documents")
+    add_custom_target(${DOXYGEN} DEPENDS "Doxyfile")
+    set_target_properties(${DOXYGEN} PROPERTIES FOLDER "doxygen")
+  endif()
 endif()
 
 # CMake module path
