--- a/.github/workflows/build-windows-mingw.yml
+++ b/.github/workflows/build-windows-mingw.yml
@@ -17,6 +17,11 @@ jobs:
       - name: "Setup cmake"
         run: cmake --version
 
+      - name: "Setup Doxygen & Graphviz"
+        run: |
+          choco install doxygen
+          choco install graphviz
+
       - name: "Setup gil"
         run: |
           pip3 install gil
