--- a/.github/workflows/build-windows-mingw.yml
+++ b/.github/workflows/build-windows-mingw.yml
@@ -11,6 +11,9 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
+      - name: "Setup MinGW"
+        run: choco install mingw
+
       - name: "Setup cmake"
         run: cmake --version
 
