Fix msys2 build

--- a/.github/workflows/build-windows-msys2.yml
+++ b/.github/workflows/build-windows-msys2.yml
@@ -14,19 +14,19 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
-      - name: "Setup MSYS2"
-        uses: msys2/setup-msys2@v2
-        with:
-          release: false
-          install: >-
-            git
-            make
-            python3-pip
-            mingw-w64-x86_64-cmake
-            mingw-w64-x86_64-gcc
-            mingw-w64-x86_64-doxygen
-            mingw-w64-x86_64-graphviz
-            msys2-w32api-runtime
+#      - name: "Setup MSYS2"
+#        uses: msys2/setup-msys2@v2
+#        with:
+#          release: false
+#          install: >-
+#            git
+#            make
+#            python3-pip
+#            mingw-w64-x86_64-cmake
+#            mingw-w64-x86_64-gcc
+#            mingw-w64-x86_64-doxygen
+#            mingw-w64-x86_64-graphviz
+#            msys2-w32api-runtime
 
       - name: "Setup cmake"
         run: cmake --version
