--- a/.github/workflows/build-windows-msys2.yml
+++ b/.github/workflows/build-windows-msys2.yml
@@ -10,23 +10,23 @@ jobs:
     runs-on: windows-latest
     defaults:
       run:
-        shell: C:\msys64\usr\bin\bash.exe {0}
+        shell: msys2 {0}
     steps:
       - uses: actions/checkout@v2
 
-#      - name: "Setup MSYS2"
-#        uses: msys2/setup-msys2@v2
-#        with:
-#          release: false
-#          install: >-
-#            git
-#            make
-#            python3-pip
-#            mingw-w64-x86_64-cmake
-#            mingw-w64-x86_64-gcc
-#            mingw-w64-x86_64-doxygen
-#            mingw-w64-x86_64-graphviz
-#            msys2-w32api-runtime
+      - name: "Setup MSYS2"
+        uses: msys2/setup-msys2@v2
+        with:
+          release: false
+          install: >-
+            git
+            make
+            python3-pip
+            mingw-w64-x86_64-cmake
+            mingw-w64-x86_64-gcc
+            mingw-w64-x86_64-doxygen
+            mingw-w64-x86_64-graphviz
+            msys2-w32api-runtime
 
       - name: "Setup cmake"
         run: cmake --version
