--- a/.github/workflows/build-macos.yml
+++ b/.github/workflows/build-macos.yml
@@ -11,6 +11,10 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
+      - name: "Setup python"
+        uses: actions/setup-python@v4
+        run: echo $PATH
+
       - name: "Setup cmake"
         run: cmake --version
 
