--- a/.github/workflows/build-macos.yml
+++ b/.github/workflows/build-macos.yml
@@ -13,13 +13,13 @@ jobs:
 
       - name: "Setup python"
         uses: actions/setup-python@v4
-        run: echo $PATH
 
       - name: "Setup cmake"
         run: cmake --version
 
       - name: "Setup gil"
         run: |
+          echo $PATH
           pip3 install gil
           gil update
 
