Fix compilation issues

--- a/.github/workflows/build-macos.yml
+++ b/.github/workflows/build-macos.yml
@@ -13,6 +13,8 @@ jobs:
 
       - name: "Setup python"
         uses: actions/setup-python@v4
+        with:
+          python-version: '3.11'
 
       - name: "Setup cmake"
         run: cmake --version
