Fix compilation issues

--- a/.github/workflows/build-macos.yml
+++ b/.github/workflows/build-macos.yml
@@ -14,7 +14,8 @@ jobs:
       - name: "Setup python"
         uses: actions/setup-python@v4
         with:
-          python-version: '3.11'
+          python-version: '3.x'
+          check-latest: true
 
       - name: "Setup cmake"
         run: cmake --version
