--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -72,8 +72,8 @@ if(NOT CPPBENCHMARK_MODULE)
   file(GLOB TESTS_SOURCE_FILES "tests/*.cpp")
   add_executable(cppbenchmark-tests ${TESTS_HEADER_FILES} ${TESTS_INLINE_FILES} ${TESTS_SOURCE_FILES})
   set_target_properties(cppbenchmark-tests PROPERTIES COMPILE_FLAGS "${PEDANTIC_COMPILE_FLAGS}" FOLDER "tests")
-  target_include_directories(cppbenchmark-tests PRIVATE Catch2::Catch2)
-  target_link_libraries(cppbenchmark-tests ${LINKLIBS} Catch2::Catch2WithMain)
+  target_include_directories(cppbenchmark-tests PRIVATE Catch2)
+  target_link_libraries(cppbenchmark-tests ${LINKLIBS} Catch2)
   list(APPEND INSTALL_TARGETS cppbenchmark-tests)
   list(APPEND INSTALL_TARGETS_PDB cppbenchmark-tests)
 
