--- a/.github/workflows/build-windows-msys2.yml
+++ b/.github/workflows/build-windows-msys2.yml
@@ -17,15 +17,16 @@ jobs:
       - name: "Setup MSYS2"
         uses: msys2/setup-msys2@v2
         with:
+          msystem: UCRT64
           release: false
           install: >-
             git
-            make
-            python3-pip
-            mingw-w64-x86_64-cmake
-            mingw-w64-x86_64-gcc
-            mingw-w64-x86_64-doxygen
-            mingw-w64-x86_64-graphviz
+            mingw-w64-${{msystem}}-x86_64-cmake
+            mingw-w64-${{msystem}}-x86_64-gcc
+            mingw-w64-${{msystem}}-x86_64-doxygen
+            mingw-w64-${{msystem}}-x86_64-graphviz
+            mingw-w64-${{msystem}}-x86_64-make
+            mingw-w64-${{msystem}}-x86_64-python-pip
             msys2-w32api-runtime
 
       - name: "Setup cmake"
