Check git actions build

--- a/.github/workflows/build-windows-msys2.yml
+++ b/.github/workflows/build-windows-msys2.yml
@@ -21,12 +21,12 @@ jobs:
           release: false
           install: >-
             git
-            mingw-w64-*-x86_64-cmake
-            mingw-w64-*-x86_64-gcc
-            mingw-w64-*-x86_64-doxygen
-            mingw-w64-*-x86_64-graphviz
-            mingw-w64-*-x86_64-make
-            mingw-w64-*-x86_64-python-pip
+            mingw-w64-ucrt-x86_64-cmake
+            mingw-w64-ucrt-x86_64-gcc
+            mingw-w64-ucrt-x86_64-doxygen
+            mingw-w64-ucrt-x86_64-graphviz
+            mingw-w64-ucrt-x86_64-make
+            mingw-w64-ucrt-x86_64-python-pip
             msys2-w32api-runtime
 
       - name: "Setup cmake"
