--- a/.github/workflows/build-windows-msys2.yml
+++ b/.github/workflows/build-windows-msys2.yml
@@ -28,14 +28,13 @@ jobs:
             mingw-w64-ucrt-x86_64-graphviz
             msys2-w32api-runtime
             python-pip
-            python-gil
 
       - name: "Setup cmake"
         run: cmake --version
 
       - name: "Setup gil"
         run: |
-          pip3 install gil
+          pip3 install gil --break-system-packages
           gil update
 
       - name: "Build"
